--- a/FXTest/src/application/Main.fxml
+++ b/FXTest/src/application/Main.fxml
@@ -5,14 +5,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
    <children>
       <Label alignment="CENTER" layoutX="1.0" layoutY="30.0" prefHeight="97.0" prefWidth="600.0" text="This is a window made with SceneBuilder" textAlignment="CENTER" wrapText="true">
          <font>
             <Font name="Eras Demi ITC" size="34.0" />
          </font>
       </Label>
-      <TextField layoutX="226.0" layoutY="245.0" promptText="Type stuff..." />
+      <TextField layoutX="226.0" layoutY="245.0" onKeyPressed="#printText" promptText="Type stuff..." />
    </children>
 </AnchorPane>
